feat: chnaged container

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -39,9 +39,7 @@ td {
 .inputContainer {
   display: flex;
   flex-direction: column;
-  gap: 5px 10px;
-  justify-content: center;
-  margin: auto;
+  gap: 1px;
 }
 
 input {
