Revert "feat: updated css"

--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,6 +1,9 @@
 body {
   font-family: "Poppins", sans-serif;
   font-size: 14px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 
 p {
@@ -17,14 +20,8 @@ h2 {
 
 table {
   text-align: left;
-  margin-left: auto;
-  margin-right: auto;
-  width: 40%;
-}
-
-.upperContainer {
   margin: auto;
-  width: 40%;
+  width: 100%;
 }
 
 td,
@@ -96,11 +93,7 @@ input {
 }
 
 @media screen and (max-width: 800px) {
-  table,
-  footer,
-  th,
-  td,
-  .main-div {
+  body {
     width: 90%;
     font-size: small;
   }
